content changed of home page and pplan page

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -154,13 +154,13 @@
     <!-- Slider Banner -->
     <div class="row">
         <div class="col-lg-6" style="padding:8em 2em 4em 12%;background-color:#ffffff;">
-            <h5 style="color:#74226c;" class="pb-2">CODE | CONNECT | COLLABORATE</h5>
+            <h1 style="color:#74226c;font-size:3em;line-height:1em;" class="pb-2 h1">Nothing great is <strong style="color:#4B2142">Coded</strong> Alone.</h1>
+            <h5 style="color:#74226c;" class="pb-2">Collaboratively Cloud Code AI Projects from anywhere in the world on our proprietary and User-Friendly SaaS , spending no time on building the environment</h5>
 
 
-            <h1 style="color:#4B2142;font-size:3em;line-height:1em;" class="pb-2 h1">We are a blend of social network
-                and artifical intelligence learning.</h1>
 
-            <a href="{% url 'user:register' %}" class="btn radius-xl btn-sign btn-aware">Start Coding <span></span></a>
+
+            <a href="{% url 'user:register' %}" class="btn radius-xl btn-sign btn-aware">Start Coding For Free <span></span></a>
         </div>
 
         <div class="col-lg-6" style="background: white;height: 500px;">
@@ -392,15 +392,7 @@
                             <h2 class="title text-primary">AI CODE ROOMS</h2>
                             <!--                            <p>An environment which helps to connect people that are looking for AI/Coding solutions, people with no previous communication can connect through a Stellar AI Id which leads to a code room which includes important features like chats, voice calls and video calls.</p>-->
                             <!--                            <p>AI/Coding personal tutors, E-learning Institutions , Companies, students can use such affordable AI Code rooms for personal growth.</p>-->
-                            <p style="color:#74226c">A Connabo code-room is a unique SaaS of Stellar AI, which has a
-                                exciting environment where one can do real time live collaborative coding with anyone
-                                you are friends with on the Connabo Ecosystem. Every code-room has an owner/admin.
-                                Once you find a user/connection on the Ecosystem you have to send that person a friend
-                                request add that person a friend then you can add them in your particular owned
-                                code-room and start with your real time coding , data science , algorithm making , etc.
-                                It is the most user-friendly way to connect any national and international users and
-                                grow together. It also has real time audio calls, video calls and chatting making it
-                                more user-friendly</p>
+                            <p style="color:#74226c">Connabo's Code-Room is a unique SaaS platform that allows you to collaborate in real-time on coding projects with friends on our ecosystem. As the owner of your own code-room, you can invite connections and friends to join you and work together on a variety of projects. Our user-friendly platform also offers audio and video calling, as well as instant messaging, making collaboration even more interactive. Connect with users from around the world and grow together on our platform.</p>
                             <a href="{% url 'user:register' %}" class="btn radius-xl btn-sign btn-aware">Start Real Time
                                 Live Collaborative Coding<span></span></a>
 
@@ -429,12 +421,10 @@
                             <div class="overview-info wow fadeInLeft" data-wow-delay="0.3s">
                                 <span class="sub-title " style="color:#4B2142 ">Forums</span>
                                 <h2 class="title text-primary">AI COMMUNITY</h2>
-                                <p style="color:#74226c">A place where anyone can post their particular doubts ,
-                                    questions , errors, discussions and expect instant solutions/help from anyone in the
-                                    community.</p>
-                                <p style="color:#74226c">AI Algorithms like Recommendation System , Clustering are used
-                                    here in the backend for a better and more efficient user experience that connects
-                                    like-minded and similar background people together.</p>
+                                <p style="color:#74226c">Our platform is a community where anyone can ask for help or advice on their doubts, questions, and errors, and expect instant solutions from other members. We use AI algorithms like recommendation systems and clustering in the background to provide a better, more efficient user experience that connects people with similar backgrounds and interests. Join us and discover the power of our collaborative community.</p>
+{#                                <p style="color:#74226c">AI Algorithms like Recommendation System , Clustering are used#}
+{#                                    here in the backend for a better and more efficient user experience that connects#}
+{#                                    like-minded and similar background people together.</p>#}
                                 <!--                                <a href="#" class="btn btn-gradient btn-md radius-xl">Explor More</a>-->
                                 <a href="{% url 'user:register' %}" class="btn radius-xl btn-sign btn-aware">Start
                                     Bonding <span></span></a>
@@ -467,9 +457,7 @@
                                 <span class="sub-title " style="color:#4B2142">Rich coding templates</span>
                                 <h2 class="title text-primary">AI SKELETON CODES
                                 </h2>
-                                <p style="color:#74226c">An environment where Machine Learning and Deep Learning
-                                    professionals/students can directly use filters and get the basic skeleton code and
-                                    then edit it further for the project requirement</p>
+                                <p style="color:#74226c">Our platform is a space where machine learning and deep learning professionals and students can easily access customizable code templates to jumpstart their projects. Our filters allow users to quickly find the right code skeleton for their needs, which can then be edited and customized to fit their specific project requirements. Join us and experience the convenience and power of our platform for yourself</p>
                                 <a href="{% url 'user:register' %}" class="btn radius-xl btn-sign btn-aware">Start
                                     Learning <span></span></a>
 
@@ -488,11 +476,9 @@
                             <div class="overview-info wow fadeInLeft" data-wow-delay="0.3s">
                                 <span class="sub-title " style="color:#4B2142">Compete</span>
                                 <h2 class="title text-primary">AI COMPETITIONS </h2>
-                                <p style="color:#74226c">An ecosystem where different types of Machine Learning, Deep
-                                    Learning and AI competitions will be hosted here for a more competitive experience.
+                                <p style="color:#74226c">Our platform is an ecosystem where machine learning, deep learning, and AI enthusiasts can compete in a variety of competitions and challenges. Institutions, companies, and organizations with business problems related to AI can also host their datasets on our platform, providing a unique opportunity for the community to develop solutions and advance the field. Join us and discover the competitive and collaborative possibilities of our platform
                                 </p>
-                                <p style="color:#74226c">Any Institution, Company, Organization with a Business Problem
-                                    on AI can host the particular Dataset on our ecosystem</p>
+
                                 <a href="{% url 'user:register' %}" class="btn radius-xl btn-sign btn-aware">Start
                                     Competing <span></span></a>
 
