content changed of home page and pplan page

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -155,7 +155,8 @@
     <div class="row">
         <div class="col-lg-6" style="padding:8em 2em 4em 12%;background-color:#ffffff;">
             <h1 style="color:#74226c;font-size:3em;line-height:1em;" class="pb-2 h1">Nothing great is <strong style="color:#4B2142">Coded</strong> Alone.</h1>
-            <h5 style="color:#74226c;" class="pb-2">Collaboratively Cloud Code AI Projects from anywhere in the world on our proprietary and User-Friendly SaaS , spending no time on building the environment</h5>
+{#            <h5 style="color:#74226c;" class="pb-2">Collaboratively Cloud Code AI Projects from anywhere in the world on our proprietary and User-Friendly SaaS , spending no time on building the environment</h5>#}
+            <p style="color:#74226c">Collaboratively Cloud Code AI Projects from anywhere in the world on our proprietary and User-Friendly SaaS , spending no time on building the environment</p>
 
 
 
@@ -334,40 +335,6 @@
 
 
 </style>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
     <div class="content-block mt-5 bg-white">
         <!-- featured box -->
