--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -504,10 +504,12 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6 col-md-12 text-left "><span>Copyright © 2021 Stellar AI</span></div>
-                    <div class="col-lg-6 col-md-12 text-right"><span>Developed by <a style="color:#4B2142"
+                   <!-- <div class="col-lg-6 col-md-12 text-right"><span>Developed by <a style="color:#4B2142"
                                                                                      href="http://siteguide.co.in/"
                                                                                      target="_blank">SiteGuide</a></span>
                     </div>
+                    -->
+
                     <!--                        <div class="col-lg-4 col-md-12 text-right ">-->
                     <!--                            <div class="widget-link">-->
                     <!--                                <ul>-->
