Update frontend titles

--- a/chat/templates/chat/old_chat-js.html
+++ b/chat/templates/chat/old_chat-js.html
@@ -1024,7 +1024,7 @@ function getMessageById(data) {
         }
         // Redirect to jupyter notebook
         function redirectNotebook(){
-            let logout_url = 'https://jupyter.connabo.com/jupyter/hub/logout';
+            let logout_url = 'https://jupyter.collaborativepy.com/jupyter/hub/logout';
             $.ajax({
                 url : logout_url,
                 success : function(data)
@@ -1038,7 +1038,7 @@ function getMessageById(data) {
 
         }
         function redirectPeerNotebook(user_id){
-            let logout_url = 'https://jupyter.connabo.com/jupyter/hub/logout';
+            let logout_url = 'https://jupyter.collaborativepy.com/jupyter/hub/logout';
             $.ajax({
                 url : logout_url,
                 success : function(data)
