--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -188,15 +188,17 @@
     <!-- <br><br><br><br><br> -->
 
 
-    <div class="social">
-  <a href="{% url 'home:workspace' %}">
+{#   Side button #}
+
+{#    <div class="social">#}
+{#  <a href="{% url 'home:workspace' %}">#}
 {#  <a href="#">#}
-    <div class="social-btn color-telegram">
-      <div class="icons8-telegram-app"></div>
-      <p class="order-2 google-font">&nbsp;&nbsp;Connabo Biz&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
-    </div>
-  </a>
-</div>
+{#    <div class="social-btn color-telegram">#}
+{#      <div class="icons8-telegram-app"></div>#}
+{#      <p class="order-2 google-font">&nbsp;&nbsp;CollaborativePY&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>#}
+{#    </div>#}
+{#  </a>#}
+{#</div>#}
 
     <style>
 .social-btn {
@@ -357,9 +359,9 @@
                             <span class="sub-title" style="color:#4B2142 ">Collaborative coding solutions<img
                                     src="{% static 'images/background/bg6.png' %}" alt=""/></span>
                             <h2 class="title text-primary">AI CODE ROOMS</h2>
-                            <!--                            <p>An environment which helps to connect people that are looking for AI/Coding solutions, people with no previous communication can connect through a Stellar AI Id which leads to a code room which includes important features like chats, voice calls and video calls.</p>-->
+                            <!--                            <p>An environment which helps to connect people that are looking for AI/Coding solutions, people with no previous communication can connect through a CollaborativePY Id which leads to a code room which includes important features like chats, voice calls and video calls.</p>-->
                             <!--                            <p>AI/Coding personal tutors, E-learning Institutions , Companies, students can use such affordable AI Code rooms for personal growth.</p>-->
-                            <p style="color:#74226c">Connabo's Code-Room is a unique SaaS platform that allows you to collaborate in real-time on coding projects with friends on our ecosystem. As the owner of your own code-room, you can invite connections and friends to join you and work together on a variety of projects. Our user-friendly platform also offers audio and video calling, as well as instant messaging, making collaboration even more interactive. Connect with users from around the world and grow together on our platform.</p>
+                            <p style="color:#74226c">CollaborativePY's Code-Room is a unique SaaS platform that allows you to collaborate in real-time on coding projects with friends on our ecosystem. As the owner of your own code-room, you can invite connections and friends to join you and work together on a variety of projects. Our user-friendly platform also offers audio and video calling, as well as instant messaging, making collaboration even more interactive. Connect with users from around the world and grow together on our platform.</p>
                             <a href="{% url 'user:register' %}" class="btn radius-xl btn-sign btn-aware">Start Real Time
                                 Live Collaborative Coding<span></span></a>
 
@@ -476,10 +478,10 @@
             <!--&lt;!&ndash;                                <span class="sub-title text-primary">Rich coding templates</span>&ndash;&gt;-->
             <!--                                <h2 class="title"><a href="#">Line of business</a>-->
             <!--                                </h2>-->
-            <!--                                <p>A community based model where Artificial Intelligence/Coding/Machine-Learning enthusiasts can meet and connect with each other through different <br> Stellar AI features like -</p>-->
+            <!--                                <p>A community based model where Artificial Intelligence/Coding/Machine-Learning enthusiasts can meet and connect with each other through different <br> CollaborativePY features like -</p>-->
             <!--                                <p>-->
             <!--                                    1) AI Forums where users can post their doubts/questions/discussions and expect instant replies/answers from other users.<br>-->
-            <!--2) AI Code-rooms where users can add friends from the Stellar AI community and can connect live on code-room feature on the website , where they get live , chatting, video calling and a Common Coding Interface which is specially for AI/ML/DL purposes. This is paid but very affordable.<br>-->
+            <!--2) AI Code-rooms where users can add friends from the CollaborativePY community and can connect live on code-room feature on the website , where they get live , chatting, video calling and a Common Coding Interface which is specially for AI/ML/DL purposes. This is paid but very affordable.<br>-->
             <!--3) AI Skeleton Codes where there are ready made codes of different Artificial Intelligence Algorithms which the users can download and select as per the selected filters.<br>-->
             <!--4) AI Competitions where AI/ML/DL Competitons from different sources will be posted and the  users can learn more and improve themselves by solving such datasets alone or in a team and grow together.<br>-->
             <!--                                </p>-->
