--- a/home/templates/home/social_base.html
+++ b/home/templates/home/social_base.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-    <title> Connabo</title>
+    <title> CollaborativePY</title>
     <link rel="icon" type="image/png" href="{% static 'images/logo/color-logo.png' %}" />.
     <!-- Fonts -->
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
@@ -37,8 +37,8 @@
         <div class="container is-fluid">
             <div class="navbar-brand">
                 <a href="{% url 'home:home' %}" class="navbar-item">
-                    <!-- <h1>Stellar Ai</h1> -->
-                    <img class="logo light-image" src="{% static 'images/logo/color-logo.png' %}" width="112" height="28" alt="">
+                    <!-- <h1>CollaborativePY</h1> -->
+                    <img class="logo light-image" src="{% static 'images/logo/collab_latest.png' %}" width="112" height="28" alt="">
                     <!-- <img class="logo dark-image" src="{% static 'social_assets/img/logo/friendkit-white.svg' %}" width="112" height="28" alt=""> -->
                 </a>
             </div>
@@ -619,8 +619,8 @@
         <!-- Brand -->
         <div class="navbar-brand">
             <a class="navbar-item" href="{% url 'home:home' %}">
-                <!-- <h1>Stellar Ai</h1> -->
-                <img class="light-image" src="{% static 'images/logo/color-logo.png' %}" alt="">
+                <!-- <h1>CollaborativePY</h1> -->
+                <img class="light-image" src="{% static 'images/logo/collab_latest.png' %}" alt="">
                 <!-- <img class="dark-image" src="{% static 'social_assets/img/logo/friendkit-white.svg' %}" alt=""> -->
             </a>
             <div style="display: flex; overflow-x: auto; overflow-y: hidden;">
