--- a/home/templates/home/temp.html
+++ b/home/templates/home/temp.html
@@ -136,7 +136,7 @@
 
             <p id="myheader" class="display-5 mb-3 animated slideInDown"> Introducing RCW for your team
                 {#            <span class="code_connect">Code|Connect|Collaborate</span> </p>#}
-            <p id="mypara" class="animated slideInDown"> Remote coding workspaces are now a possibility with Connabo's
+            <p id="mypara" class="animated slideInDown"> Remote coding workspaces are now a possibility with CollaborativePY's
                 proprietary Code-Room Technology</p>
             <a id="mybtn" href="" class="btn btn-primary py-3 px-4 animated slideInDown">Explore More</a>
 
@@ -173,7 +173,7 @@
 3545 0 16 -3535 3547 -3543 3539z"/>
                 </g>
             </svg>
-            <p class="side-logo animated pulse infinite" style="">CONNABO</p>
+            <p class="side-logo animated pulse infinite" style="">CollaborativePY</p>
             <p class="side-logo animated pulse infinite" style="">Code | Connect | Collaborate</p>
         </div>
     </div>
@@ -298,7 +298,7 @@
 
                         <p style="color:#74226c">Develop anything on cloud with no set up. Create collaborative coding
                             workspaces along with your team and work from anywhere through the cloud infrastructure we
-                            provide also boost up your storage & RAM of your code-rooms on Connabo.</p>
+                            provide also boost up your storage & RAM of your code-rooms on CollaborativePY.</p>
 {#                        <a href="{% url 'user:register' %}" class="btn radius-xl btn-sign btn-aware">Start Real Time#}
 {#                            Live Collaborative Coding<span></span></a>#}
                     </div>
@@ -525,7 +525,7 @@
                     <div class="overview-box style1">
                         <div class="overview-info wow fadeInLeft" data-wow-delay="0.3s">
                             <h2 class="title text-primary">UNIQUE LINK SHARING </h2>
-                            <p style="color:#74226c">The super user can invite their team members on the Connabo
+                            <p style="color:#74226c">The super user can invite their team members on the CollaborativePY
                                 code-space just by sharing unique generated links, hence making it hassle free and a
                                 user friendly collaboration
                             </p>
