--- a/post/templates/post/social_base.html
+++ b/post/templates/post/social_base.html
@@ -45,8 +45,8 @@
         <div class="container is-fluid">
             <div class="navbar-brand">
                 <a href="index.html" class="navbar-item">
-                    <img class="logo light-image" src="{% static 'social_assets/img/logo/friendkit-bold.svg' %}" width="112" height="28" alt="">
-                    <img class="logo dark-image" src="{% static 'social_assets/img/logo/friendkit-white.svg' %}" width="112" height="28" alt="">
+                    <img class="logo light-image" src="{% static 'images/logo/collab_latest.png' %}" width="112" height="28" alt="">
+                    <img class="logo dark-image" src="{% static 'images/logo/collab_latest.png' %}" width="112" height="28" alt="">
                 </a>
             </div>
             <div class="navbar-menu">
