--- a/chat/templates/chat/chat-direct.html
+++ b/chat/templates/chat/chat-direct.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-    <title> Connabo | Chat</title>
+    <title> CollaborativePy | Chat</title>
     <link rel="icon" type="image/png" href="{% static 'images/logo/color-logo.png' %}" />
 
 </head>
