--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -34,22 +34,22 @@
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="keywords" content="Connabo, Group Coding, Ai"/>
+    <meta name="keywords" content="CollaborativePY, Group Coding, Ai"/>
     <meta name="author" content=""/>
     <meta name="robots" content=""/>
     <meta name="description"
           content="A website working on Artificial Intelligence algorithms and down the pike planning to model more Artificial Intelligent algorithms in its skeleton for the users."/>
-    <meta property="og:title" content="Connabo"/>
+    <meta property="og:title" content="CollaborativePY"/>
     <meta property="og:description"
           content="A website working on Artificial Intelligence algorithms and down the pike planning to model more Artificial Intelligent algorithms in its skeleton for the users."/>
     <meta property="og:image" content=""/>
     <meta name="format-detection" content="telephone=no">
 
     <!-- FAVICONS ICON -->
-    <link rel="icon" type="image/png" href="{% static 'images/logo/color-logo.png' %}"/>
+    <link rel="icon" type="image/img" href="{% static 'images/logo/favicon.ico' %}"/>
 
     <!-- PAGE TITLE HERE -->
-    <title>Connabo</title>
+    <title style="color: #4B2142">CollaborativePY</title>
 
     <!-- MOBILE SPECIFIC -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -149,7 +149,7 @@
         }
 
         .code_connect_line_class {
-            margin-top: -18px;
+            margin-top: -42px;
                     margin-left:0px;
 
 
@@ -168,6 +168,7 @@
 
         .svg_logo {
                 margin-left: -77px;
+            margin-top: 27px;
         }
 
         .dez-page svg {
@@ -190,40 +191,41 @@
                     <div class="logo-header pt-2 pb-0 mostion" style="width: 180px">
                         <a href="{% url 'home:home' %}" class="dez-page p-0">
                             <?xml version="1.0" standalone="no"?>
-                            <svg version="1.0" style="" class="svg_logo"
-                                 xmlns="http://www.w3.org/2000/svg"
-                                 width="250" height="70" viewBox="0 0 1628.000000 1628.000000"
-                                 preserveAspectRatio="xMidYMid meet">
-
-                                <g transform="translate(0.000000,1628.000000) scale(0.100000,-0.100000)"
-                                   fill="#74226c" stroke="none">
-                                    <path d="M7255 14494 c-1161 -78 -2312 -504 -3250 -1206 -644 -481 -1190
--1086 -1610 -1783 -102 -168 -287 -530 -365 -715 -279 -654 -437 -1299 -491
--2005 -14 -190 -14 -695 0 -885 114 -1503 740 -2873 1791 -3920 783 -780 1711
--1314 2785 -1604 906 -244 1938 -269 2865 -70 1954 420 3584 1755 4374 3582
-336 778 506 1600 506 2452 0 978 -218 1897 -660 2780 -585 1172 -1556 2142
--2734 2732 -1000 501 -2083 718 -3211 642z m670 -834 c820 -39 1565 -244 2287
--627 984 -522 1830 -1412 2293 -2413 212 -457 358 -917 435 -1372 127 -741 95
--1526 -91 -2238 -301 -1149 -952 -2140 -1889 -2875 -780 -610 -1783 -1008
--2765 -1095 -66 -6 -141 -13 -166 -15 -106 -12 -624 -5 -791 10 -1241 112
--2371 628 -3254 1488 -580 564 -1009 1223 -1288 1979 -348 943 -420 1956 -210
-2953 156 746 507 1508 973 2115 289 377 672 757 1036 1030 848 634 1880 1008
-2920 1059 249 12 280 12 510 1z"/>
-                                    <path d="M5282 10107 c-1007 -1007 -1832 -1837 -1832 -1842 0 -11 3661 -3675
-3673 -3675 4 0 7 321 7 712 l0 713 -1125 1125 -1126 1126 1126 1129 1125 1129
-0 708 c0 389 -3 708 -8 708 -4 0 -832 -825 -1840 -1833z"/>
-                                    <path d="M8027 11804 c-4 -4 -7 -278 -7 -608 l0 -601 1162 -1162 1163 -1163
--1163 -1163 -1162 -1162 0 -613 c0 -336 3 -612 7 -612 12 0 3543 3534 3543
-3545 0 16 -3535 3547 -3543 3539z"/>
-                                </g>
-                            </svg>
-                            <p class="code_connect_line_class" style="">CONNABO</p>
-                            <p class="by_stellar_class" style="">by Stellar AI</p>
+{#                            <svg version="1.0" style="" class="svg_logo"#}
+{#                                 xmlns="http://www.w3.org/2000/svg"#}
+{#                                 width="250" height="70" viewBox="0 0 1628.000000 1628.000000"#}
+{#                                 preserveAspectRatio="xMidYMid meet">#}
+{##}
+{#                                <g transform="translate(0.000000,1628.000000) scale(0.100000,-0.100000)"#}
+{#                                   fill="#74226c" stroke="none">#}
+{#                                    <path d="M7255 14494 c-1161 -78 -2312 -504 -3250 -1206 -644 -481 -1190#}
+{#-1086 -1610 -1783 -102 -168 -287 -530 -365 -715 -279 -654 -437 -1299 -491#}
+{#-2005 -14 -190 -14 -695 0 -885 114 -1503 740 -2873 1791 -3920 783 -780 1711#}
+{#-1314 2785 -1604 906 -244 1938 -269 2865 -70 1954 420 3584 1755 4374 3582#}
+{#336 778 506 1600 506 2452 0 978 -218 1897 -660 2780 -585 1172 -1556 2142#}
+{#-2734 2732 -1000 501 -2083 718 -3211 642z m670 -834 c820 -39 1565 -244 2287#}
+{#-627 984 -522 1830 -1412 2293 -2413 212 -457 358 -917 435 -1372 127 -741 95#}
+{#-1526 -91 -2238 -301 -1149 -952 -2140 -1889 -2875 -780 -610 -1783 -1008#}
+{#-2765 -1095 -66 -6 -141 -13 -166 -15 -106 -12 -624 -5 -791 10 -1241 112#}
+{#-2371 628 -3254 1488 -580 564 -1009 1223 -1288 1979 -348 943 -420 1956 -210#}
+{#2953 156 746 507 1508 973 2115 289 377 672 757 1036 1030 848 634 1880 1008#}
+{#2920 1059 249 12 280 12 510 1z"/>#}
+{#                                    <path d="M5282 10107 c-1007 -1007 -1832 -1837 -1832 -1842 0 -11 3661 -3675#}
+{#3673 -3675 4 0 7 321 7 712 l0 713 -1125 1125 -1126 1126 1126 1129 1125 1129#}
+{#0 708 c0 389 -3 708 -8 708 -4 0 -832 -825 -1840 -1833z"/>#}
+{#                                    <path d="M8027 11804 c-4 -4 -7 -278 -7 -608 l0 -601 1162 -1162 1163 -1163#}
+{#-1163 -1163 -1162 -1162 0 -613 c0 -336 3 -612 7 -612 12 0 3543 3534 3543#}
+{#3545 0 16 -3535 3547 -3543 3539z"/>#}
+{#                                </g>#}
+{#                            </svg>#}
+                            <img src="{% static 'images/logo/collab_latest.png' %}" class="svg_logo" style="height: 45px;">
+                            <p class="code_connect_line_class" style="">CollaborativePY</p>
+                            <p class="by_stellar_class" style="">by CollaborativePY</p>
 
                             {#                                <img src="{% static 'images/logo/logo-v1.png' %}"  style="width: 200px; height:77px;" class="p-0">#}
                         </a>
-                        <!--                            <p>Connabo</p>-->
-                        <!--                            <p>Connabo</p>-->
+                        <!--                            <p>CollaborativePY</p>-->
+                        <!--                            <p>CollaborativePY</p>-->
                     </div>
                     <!-- nav toggle button -->
                     <button class="navbar-toggler collapsed navicon justify-content-end" type="button"
@@ -245,7 +247,7 @@
                                     <a href="{% url 'user:register' %}"
                                        class="btn outline radius-xl btn-sign btn-aware">Sign up <span></span></a>&nbsp;
                                     <a href="{% url 'home:workspace' %}"
-                                       class="btn outline radius-xl btn-sign btn-aware">Connabo for Business <span></span></a>&nbsp;
+                                       class="btn outline radius-xl btn-sign btn-aware">CollaborativePY for Business <span></span></a>&nbsp;
                                 {% endif %}
                                 {% if 'workspace' in request.path %}
                                 <a href="{% url 'user:company-register' %}"
@@ -277,7 +279,7 @@
                     {% url 'analytics:user-list' as path_analytics %}
                     <div class="header-nav navbar-collapse collapse justify-content-start" style="margin-top:12px" id="navbarNavDropdown">
                         <div class="logo-header mostion">
-                            <a href="{% url 'home:home' %}" class="h3 text-dark dez-page">Connabo</a>
+                            <a href="{% url 'home:home' %}" class="h3 text-dark dez-page">CollaborativePY</a>
                         </div>
                         <ul class="nav navbar-nav">
                             <li><a href="{{ path_home }}"><span
@@ -444,7 +446,7 @@
                             <h5 class="footer-title">Contact</h5>
                             <ul>
                                 <!--                                     <li>+088 01912704287</li> -->
-                                <li style="text-transform: lowercase; color:#4B2142 ">info@stellar-ai.in</li>
+                                <li style="text-transform: lowercase; color:#4B2142 ">info@collaborativepy.com</li>
                             </ul>
                         </div>
                         <div class="footer-social">
@@ -490,7 +492,7 @@
 3545 0 16 -3535 3547 -3543 3539z"/>
                                 </g>
                             </svg>
-                                     <p class="" style="color: #74226c">CONNABO</p>
+                                     <p class="" style="color: #74226c">CollaborativePY</p>
 {#                                    <img src="{% static 'images/logo/color-logo.png' %}" alt="Logo">#}
                                 </a>
                             </div>
@@ -503,7 +505,7 @@
         <div class="footer-bottom">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-6 col-md-12 text-left "><span>Copyright © 2021 Stellar AI</span></div>
+                    <div class="col-lg-6 col-md-12 text-left "><span>Copyright © 2021 CollaborativePY</span></div>
                    <!-- <div class="col-lg-6 col-md-12 text-right"><span>Developed by <a style="color:#4B2142"
                                                                                      href="http://siteguide.co.in/"
                                                                                      target="_blank">SiteGuide</a></span>
