server changes during deployment

--- a/chat/templates/chat/chat-direct.html
+++ b/chat/templates/chat/chat-direct.html
@@ -109,7 +109,7 @@
 <!--                        <polygon points="17,26 1,26 10.8,20.1 "/>-->
 <!--                    </svg>-->
 
-                    <img class="logo light-image" src="{% static 'images/logo/color-logo.png' %}" width="70px" height="70px" alt="">
+                    <img class="logo light-image" src="{% static 'images/logo/color-logo1.png' %}" width="70px" height="70px" alt="">
                 </a>
 
                 <!-- Nav items -->
