--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -167,8 +167,8 @@
         <div class="col-lg-6" style="background: white;height: 500px;">
             <center>
                 <video id="myVideo" autoplay muted loop controls style="height: 500px;width: 100%;">
-                    <source src="{% static 'video/dark.mp4' %}" type="video/mp4">
-                    <source src="{% static 'video/dark.mp4' %}" type="video/ogg">
+                    <source src="{% static 'video/dark1.mp4' %}" type="video/mp4">
+                    <source src="{% static 'video/dark1.mp4' %}" type="video/ogg">
                 </video>
             </center>
         </div>
