--- a/home/templates/home/contact.html
+++ b/home/templates/home/contact.html
@@ -72,7 +72,7 @@
                             <div class="icon-content">
                                 <h4 class="dlab-tilte m-b5">Email address</h4>
                                 <p>Want to get instant support ? Type away below.Schedule a short introductory call </p>
-                                <p>info@stellar-ai.in</p>
+                                <p>info@collaborativepy.com</p>
                             </div>
                         </div>
                     </div>
@@ -85,12 +85,6 @@
                             </div>
                             <div class="icon-content">
                                 <h4 class="dlab-tilte m-b5">Office Location</h4>
-                                <p>802, Rajhans Otium,
-                                Above Trendsetter Shop,<br>
-                                Opposite Asha Parekh Hospital,
-                                SV Road,<br>
-                                Santacruz West,<br>
-                                Mumbai 400054.</p>
                             </div>
                         </div>
                     </div>
