--- a/users/templates/users/notebook.html
+++ b/users/templates/users/notebook.html
@@ -162,7 +162,7 @@ window.onclick = function(event) {
             {% endif %}
             <div class="col p-0 h-100 hide-mobile">
                 <section class="notebook-section">
-                    <iframe src="https://jupyter.collaborativepy.com/jupyter/hub/logout" allowfullscreen></iframe>
+                    <iframe src="http://13.127.56.121/jupyter/hub/logout" allowfullscreen></iframe>
                     <iframe src=>Content-Security-Policy: frame-ancestors  '*' </iframe>
                 </section>
             </div>
