Update CORS policy

--- a/users/templates/users/notebook.html
+++ b/users/templates/users/notebook.html
@@ -163,7 +163,7 @@ window.onclick = function(event) {
             <div class="col p-0 h-100 hide-mobile">
                 <section class="notebook-section">
                     <iframe src="http://13.233.114.244:8888/jupyter/hub/logout" allowfullscreen></iframe>
-                    <iframe src=>Content-Security-Policy: frame-ancestors  '*' </iframe>
+                    <iframe src=>Content-Security-Policy: frame-ancestors  '*' http://13.233.114.244:8888 http://13.233.114.244</iframe>
                 </section>
             </div>
 
