Remove call_active flag

--- a/users/templates/users/notebook.html
+++ b/users/templates/users/notebook.html
@@ -148,7 +148,7 @@ window.onclick = function(event) {
 </script>
     <div class="custom-container">
         <main class="wrapper row" style="position: fixed;">
-            {% if call_active %}
+{#            {% if call_active %}#}
             <div class="col-lg-3 p-0 h-100" id="target" style="display: none;">
                 <style>html, body, #jaas-container { height: 100%; }</style>
 
@@ -159,7 +159,7 @@ window.onclick = function(event) {
 
                 </section>
             </div>
-            {% endif %}
+{#            {% endif %}#}
             <div class="col p-0 h-100 hide-mobile">
                 <section class="notebook-section">
                     <iframe src="http://13.233.114.244:8888/jupyter/hub/logout" allowfullscreen></iframe>
